Flex Box Model Added

--- a/template.html
+++ b/template.html
@@ -1,16 +1,42 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <title>TITLE</title>
-  <link rel="stylesheet" href="Layout.css"/>
+  <title> Enter Title Here(title bar) </title>
+  <link rel="stylesheet" href="Layout.css">
   <meta charset="utf-8"/>
 </head>
 <body>
-  <header>
-  </header>
-  <section>
-  </section>
-  <footer>
-  </footer>
+  <div id="content">
+    <header>
+      <h1>Page Title</h1>
+    </header>
+    <div id="meat">
+      <div id="main_section">
+        <section>
+		  <header>
+            <h3>Page Sub-Title</h3>
+		  </header>
+		  <article>
+		  <p>Enter Main section stuff here</p>
+		  </article>
+        </section>
+		<section>
+		</section>
+	  </div>
+      <div id="side_section">
+        <aside>
+		  <header>
+            <h3> Side Section Sub-Title </h3>
+		  </header>
+		  <article>
+		  <p>Enter Side section stuff here</p>
+		  </article>
+        </aside>
+	  </div>
+    </div>
+    <footer>
+    <h5> Footer </h5>
+    </footer>
+  </div>
 </body>
 </html>
